added nature to PokemonToken

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 *.exe
 pokemon_battle_arena/target/debug/.fingerprint/PokemonBattleArena-b3e1b176e6e843e4/bin-PokemonBattleArena
 *.json
+pokemon_battle_arena/target/debug/.fingerprint/PokemonBattleArena-b3e1b176e6e843e4/bin-PokemonBattleArena
+*.json
+pokemon_battle_arena/target/debug/PokemonBattleArena.exe
