--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ sudo: false
 git:
   depth: 1
 before_script:
-  - |
-      export PATH=$HOME/.local/bin:$HOME/.cargo/bin:$PATH &&
-      ci/install-tools.sh
+  - ci/install-tools.sh
 script:
   - ci/run-all.sh
 after_success:
