--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ cache: cargo
 sudo: false
 git:
   depth: 1
+before_install:
+ - chmod +x ci/install-tools.sh
 before_script:
   - ci/install-tools.sh
 script:
